system/argocd/patches/argocd-application-controller.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: argocd-application-controller

spec:
  template:
    metadata:
      annotations:
        materia.ggrel.net/restarted-for-server-side-diff: "2026-07-24"
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              cpu: 200m
              memory: 640Mi
            limits:
              memory: 1Gi
