system/argocd/patches/argocd-redis-resources.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: argocd-redis

spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 768Mi
