system/argocd/patches/argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: argocd-repo-server

spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
