system/argocd/patches/argocd-redis.yaml
apiVersion: v1
kind: Service

metadata:
  name: argocd-redis

spec:
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
