system/argocd/patches/argocd-dex-server.yaml
$patch: delete
apiVersion: v1
kind: Service

metadata:
  name: argocd-dex-server

---
$patch: delete
apiVersion: apps/v1
kind: Deployment

metadata:
  name: argocd-dex-server

---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: argocd-dex-server-network-policy
